--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "axios": "^0.19.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
+    "rc-pagination": "^1.20.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
