--- a/package.json
+++ b/package.json
@@ -3,19 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^9.7.2",
     "axios": "^0.19.0",
     "node-sass": "^4.13.0",
+    "postcss-cli": "^6.1.3",
     "prop-types": "^15.7.2",
-    "rc-pagination": "^1.20.11",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-lazy-load": "^3.0.13",
+    "react-paginating": "^1.3.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tailwindcss": "^1.1.3"
   },
   "scripts": {
+    "build:style": "postcss src/index.css -o src/styles.css",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
