--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "build:style": "postcss src/index.css -o src/styles.css",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run build:style && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
