--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.12.0",
     "react-lazy-load": "^3.0.13",
     "react-paginating": "^1.3.1",
+    "react-progressbar": "^15.4.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
